    - LabJackPython now refuses to install on unsupported Python versions.
    - Fixed U12 watchdog method argument parsing.  If the stateDn argument was
      invalid, it would try to raise Value (undefined) instead of ValueError.
    - Fixed U12 resetLJ method.  This method was intended to call reset but
      would always cause a NameError exception due to a typo.
    - Fixed a stream bug where stopping and restarting the stream did not reset
      the packet offset internal variable which could cause data processing for
      incorrect channels.
    - Changed the operating system detection to use sys.platform instead of
      os.name.
    - Fixed getDevCounts, openAllLabJacks, and GetResultSS on Windows.
    - Added Cygwin support.
    - Fixed a bug in openLabJack where some error conditions on Windows would
      try to raise LabjackException (undefined) instead of LabJackException.
    - Added string descriptions for low-level error codes 112 to 116.
    - Fixed a bug in U6 where I2C responses with an odd number of bytes would
      return an extra byte at the end.
    - Fixed a bug in UE9 streamData where an incorrect variable name was being
      used.
    - Fixed a Windows bug in eGetRaw when the x1 parameter has a 64-bit pointer
      address. The function now uses 32 and 64-bit safe eGetPtr UD function.
    - Fixed the returned DAC values of the readDefaultsConfig method to little
      endian.
    - Fixed many Pyflakes warnings such as unused variables and unused imports.
    - Removed use of "import *" from most modules.
- Next Release
    - Moved the ctypes import after socket to prevent an "Aborted (core dump)"
      exit error on Cygwin.
    - _makeDeviceFromHandle function now gets/sets the U3's bootloaderVersion.
    - Fixed the reset method for LabJackPython module's Device class.
    - Updated the reset method of the Device class to perform a hard and soft
      reset on Linux and Mac OS X like the Windows UD function ResetLabJack.