@@ -261,3 +261,7 @@ Version History
     - Fixed the reset method for LabJackPython module's Device class.
     - Updated the reset method of the Device class to perform a hard and soft
       reset on Linux and Mac OS X like the Windows UD function ResetLabJack.
+    - The spi() method of U3, U6, and UE9 has changed.  The keyword argument
+      "CSPINNum" has been renamed to "CSPinNum" to be consistent with the other
+      keyword arguments.  The old "CSPINNum" will still work but is deprecated
+      and will be removed in a future version.
